sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:11: error: '(' expected but identifier found.
        if fin=false
           ^AlgCocktailSort3:12: error: illegal start of simple expression
    }
    ^